<resources>
    <string name="app_name" translatable="false">RelaySMS</string>
    <string name="messages_deleted">Messages deleted</string>
    <string name="select_all">Select All</string>
    <string name="selected_messages">%d selected</string>
    <string name="recaptcha_key" translatable="false">dc4def40b6961289f969a236bb2bc433e32b29e0af06458fea56f7f2daad9eac</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_accessibility_category">Accessibility</string>
    <string name="settings_language">Language</string>
    <string name="settings_security_category">Security and Privacy</string>
    <string name="settings_security">Security</string>
    <string name="settings_security_category_summary">Enable app locks and pin codes</string>
    <string name="settings_lock_screen_preference_category">Phone Lockscreen options</string>
    <string name="settings_security_and_privacy_enable_lockscreen_open">Enable lockscreen</string>
    <string name="settings_security_and_privacy_enable_lockscreen_open_summary">Require lockscreen pin/fingerprint when starting the app</string>
    <string name="settings_security_and_privacy_account">Account</string>
    <string name="settings_security_and_privacy_account_logout">Logout</string>
    <string name="settings_security_and_privacy_account_logout_summary">Logout of your account. You can always log back in, however you current messages would be deleted. </string>
    <string name="settings_security_and_privacy_account_delete">Delete</string>
    <string name="settings_security_and_privacy_account_delete_summary">"Deleting your account means deleting all your saved accounts online. You can always recreate your account once needed.     "</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_farsi">Farsi</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_turkish">Turkish</string>
    <string name="language_german">German</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_swahili">Swahili</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_korean">Korean</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_shona">Shona</string>
    <string name="language_english_value" translatable="false">
        en
    </string>
    <string name="language_french_value" translatable="false">
        fr
    </string>
    <string name="language_farsi_value" translatable="false">
        fa
    </string>
    <string name="language_spanish_value" translatable="false">
        es
    </string>
    <string name="language_turkish_value" translatable="false">
        tr
    </string>
    <string name="language_german_value" translatable="false">
        de
    </string>
    <string name="language_arabic_value" translatable="false">
        ar
    </string>
    <string name="language_swahili_value" translatable="false">
        sw
    </string>
    <string name="language_chinese_value" translatable="false">
        zh
    </string>
    <string name="language_korean_value" translatable="false">
        ko
    </string>
    <string name="language_hindi_value" translatable="false">
        hi
    </string>
    <string name="language_shona_value" translatable="false">
        sn
    </string>
    <string name="default_gateway_MSISDN_0" translatable="false">+237679466332</string>
    <string name="default_gateway_MSISDN_2" translatable="false">+237690826242</string>
    <string name="default_gateway_MSISDN_3" translatable="false">+2348131498393</string>
    <string name="gateway_client_settings_add_custom_empty_error">Please provide a phone number</string>
    <string name="new_gateway_client_alias">Alias (optional)</string>
    <string name="gateway_client_alias_description">Name to help remember the Gateway client</string>
    <string name="gateway_client_save_btn_text">Save</string>
    <string name="choose_sms_app">Select an SMS messaging app</string>
    <string name="security_settings_failed_to_switch_security">Failed to switch security on…</string>
    <string name="settings_security_biometric_user_cannot_add_this_functionality_at_this_time">User cannot add this functionality at this time.</string>
    <string name="lock_screen_relay_sms_is_locked">RelaySMS App is locked</string>
    <string name="lock_screen_unlock_with_your_phone_s_locking_system">Unlock with your phone\'s locking system</string>
    <string name="gateway_client_add_custom_example_text">e.g +237123456789 or select contact</string>
    <string name="gateway_client_add_gateway_client_text">Add Gateway Client</string>
    <string name="otp_verification_code_template" translatable="false">Your SMSWithoutBorders-Auth verification code is: </string>
    <string name="logout_you_have_no_accounts_logged_into_vaults_at_this_time">You have no accounts logged into Vaults at this time</string>
    <string name="security_settings_you_have_no_accounts_to_delete_in_vault_at_this_time">You have no accounts to delete in Vault at this time</string>
    <string name="helper_yesterday">yesterday</string>
    <string name="smswithoutboarders_official_gateway_client_seeding_url" translatable="false">https://smswithoutborders.com:15000/v3/clients</string>
    <string name="recovery_continue">Continue</string>
    <string name="vault_grpc_url" translatable="false">vault.smswithoutborders.com</string>
    <string name="vault_grpc_port" translatable="false">443</string>
    <string name="publisher_get_platforms_url" translatable="false"></string>
    <string name="cancel">Cancel</string>
    <string name="click_continue_to_confirm_this_action_do_not_worry_this_has_no_dangerous_effects">Click continue to confirm this action. Do not worry, this has no dangerous effects.</string>
    <string name="messaging">Messaging</string>
    <string name="you_have_a_device_id_for_the_device_you_log_into_it_is_used_to_identify_you_on_the_vault_you_can_switch_to_phone_number_to_reduce_size_of_sms_message">You have a Device ID for the device you log into. It is used to identify you on the Vault. You can switch to phone number to reduce size of SMS message.</string>
    <string name="validate_with_phone_number">Validate with phone number</string>
    <string name="enter_phone_number_with_country_code">Enter phone number with country code</string>
    <string name="about">About</string>
    <string name="recents_text">Recents</string>
    <string name="get_started_text">Get started</string>
    <string name="platforms">Platforms</string>
    <string name="inbox">Inbox</string>
    <string name="countries">Countries</string>
    <string name="settings">Settings</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="add_gateway_client">Add Gateway Client</string>
    <string name="edit_gateway_client">Edit Gateway Client</string>
    <string name="e_g_237123456_or_select_contact">e.g +237123456 or select contact</string>
    <string name="alias_optional">Alias (optional)</string>
    <string name="name_to_help_remember_the_gateway_client">Name to help remember the Gateway Client</string>
    <string name="saving">Saving…</string>
    <string name="save">Save</string>
    <string name="error_saving_gateway_client">Error saving gateway client</string>
    <string name="click_continue_to_confirm_this_action_do_not_worry_it_has_no_dangerous_effects">Click continue to confirm this action. Do not worry, it has no dangerous effects.</string>
    <string name="continue_text">Continue</string>
    <string name="country_options">Country Options</string>
    <string name="revoking_account_for">Revoking account for %1$s</string>
    <string name="adding_account_for">Adding account for %1$s</string>
    <string name="send_message">Send Message</string>
    <string name="add_account">Add Account</string>
    <string name="remove_accounts">Remove Accounts</string>
    <string name="adding_emails_to_your_relaysms_account_enables_you_use_them_to_send_emails_using_sms_messaging__are_currently_supported">Adding emails to your RelaySMS account enables you use them to send emails using SMS messaging.</string>
    <string name="adding_numbers_to_your_relaysms_account_enables_you_use_them_to_send_messages_using_sms_messaging_telegram_messaging_is_currently_supported">Adding numbers to your RelaySMS account enables you use them to send messages using SMS messaging.\n\nTelegram messaging is currently supported.</string>
    <string name="adding_accounts_to_your_relaysms_account_enables_you_use_them_to_make_post_using_sms_messaging_posting_is_currently_supported">Adding accounts to your RelaySMS account enables you use them to make post using SMS messaging.\n\nPosting is currently supported.</string>
    <string name="your_relaysms_account_is_an_alias_of_your_phone_number_with_the_domain_relaysms_me_you_can_receive_replies_by_sms_whenever_a_message_is_sent_to_your_alias">Your RelaySMS account is an alias of your phone number with the domain @relaysms.me.\n\nYou can receive replies by SMS whenever a message is sent to your alias.</string>
    <string name="continue_to_send_an_email_from_your_saved_email_account_you_can_choose_a_message_forwarding_country_from_the_countries_tab_below_continue_to_send_message">Continue to send an email from your saved email account. You can choose a message forwarding country from the \'Countries\' tab below.\n\nContinue to send message</string>
    <string name="continue_to_send_messages_from_your_saved_messaging_account_you_can_choose_a_message_forwarding_country_from_the_countries_tab_below_continue_to_send_message">Continue to send messages from your saved messaging account. You can choose a message forwarding country from the \'Countries\' tab below.\n\nContinue to send message</string>
    <string name="continue_to_make_posts_from_your_saved_messaging_account_you_can_choose_a_message_forwarding_country_from_the_countries_tab_below_continue_to_send_message">Continue to make posts from your saved messaging account. You can choose a message forwarding country from the \'Countries\' tab below.\n\nContinue to send message</string>
    <string name="your_relaysms_account_is_an_alias_of_your_phone_number_with_the_domain_relaysms_me_you_can_receive_replies_by_sms_whenever_a_message_is_sent_to_your_alias_you_can_choose_a_message_forwarding_country_from_the_countries_tab_below_continue_to_send_message">Your RelaySMS account is an alias of your phone number with the domain @relaysms.me.\n\nYou can receive replies by SMS whenever a message is sent to your alias.\nYou can choose a message forwarding country from the \'Countries\' tab below.\n\nContinue to send message</string>
    <string name="select_an_account">Select an account</string>
    <string name="please_enter_your_telegram_code_without_copying_it_from_the_message_copying_might_get_flagged_and_telegram_might_block_your_account">Please enter your Telegram code without copying it from the message - copying might get flagged and Telegram might block your account.</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="no_account_selected">No account selected</string>
    <string name="compose_email">Compose Email</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="new_message">New Message</string>
    <string name="sender">Sender</string>
    <string name="recipient_number">Recipient Number</string>
    <string name="message">Message</string>
    <string name="new_post">New Post</string>
    <string name="what_s_happening">What\'s happening?</string>
</resources>